# FilmLibrary

./: .gitignore  CMakeLists.txt  README.md
includes/: KinopoiskAPIClient.h  MainWindow.h  MovieCardFactory.h  MovieCollection.h  MovieManager.h  PosterManager.h  exceptions.h  movie.h
includes/api/: KinopoiskAPIClient.h
includes/exceptions/: CollectionNotFoundException.h  DuplicateCollectionException.h  DuplicateFavoriteException.h  DuplicateMovieException.h  EmptyCollectionException.h  FileNotFoundException.h  InvalidInputException.h  InvalidMovieDataException.h  MovieException.h  MovieNotFoundException.h  exceptions.h
includes/managers/: MovieManager.h  PosterManager.h
includes/models/: MovieCollection.h  movie.h
includes/parsers/: MovieJsonParser.h  MovieParser.h
includes/repositories/: CollectionRepository.h  FavoriteRepository.h  MovieRepository.h
includes/services/: CollectionService.h  FavoriteService.h  MovieService.h
includes/ui/: MainWindow.h  MovieCardFactory.h
src/: KinopoiskAPIClient.cpp  MainWindow.cpp  MovieCardFactory.cpp  MovieCollection.cpp  MovieManager.cpp  PosterManager.cpp  main.cpp  movie.cpp
src/api/: KinopoiskAPIClient.cpp
src/exceptions/: CollectionNotFoundException.cpp  DuplicateCollectionException.cpp  DuplicateFavoriteException.cpp  DuplicateMovieException.cpp  EmptyCollectionException.cpp  FileNotFoundException.cpp  InvalidInputException.cpp  InvalidMovieDataException.cpp  MovieException.cpp  MovieNotFoundException.cpp
src/managers/: MovieManager.cpp  PosterManager.cpp
src/models/: MovieCollection.cpp  movie.cpp
src/parsers/: MovieJsonParser.cpp  MovieParser.cpp
src/repositories/: CollectionRepository.cpp  FavoriteRepository.cpp  MovieRepository.cpp
src/services/: CollectionService.cpp  FavoriteService.cpp  MovieService.cpp
src/ui/: MainWindow.cpp  MovieCardFactory.cpp
ui/: MainWindow.ui
